# Learn

./:  mypy.ini  .gitignore  README.md  pyproject.toml
EasyPython/: Multiprocessing_Proccess.py  Multiprocessing_general.py  Multiprocessing_thread.py  main.py
EasyPython/UDP/: udp_client.py  udp_server.py
Other/: CommandLineMenu.py  ContextManagerWich.py  WorkWIch_id.py  bestPractice.py  class_stter_getter.py  decorators.py  object_slots.py  test.py  test_check_encoding.py  test_pytest.py  tested_file.py
Python_in_ComputerScine/: Fibonacci.py
Task_From_Sobes/: CheckIP.py  Check_Staples.py  Convert_HSL_to_RBG.py  GetAllSubSet.py  GetAnnotations.py  IndexUniquiSymbol.py  InsertInToArray.py  Longest_Prefix.py  PhoneNumber.py  calculate_max_height.py  count_neg_and_pos.py  get_ext.py  hex_to_rgb.py  int_to_ip.py  not_pari_int.py  sort_grades.py  spin_words.py  sum_miss.py  task_library.py  time_to_human_dur.py  to_camel.py
