[tool.poetry]
name = "first_double"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
construct = "^2.10.67"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
gevent = "^21.8.0"
PyInquirer = "^1.0.3"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
